--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,19 @@ numpy = "^1.22.3"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.1"
+coverage = {extras = ["toml"], version = "^6.3.2"}
+pytest-cov = "^3.0.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.coverage.paths]
+source = ["src", "*/site-packages"]
+
+[tool.coverage.run]
+branch = true
+source = ["tetris"]
+
+[tool.coverage.report]
+show_missing = true
